RESOLVED FIXED192762
Reproducible ASSERTion failure when toggling layer borders with find-in-page up
https://bugs.webkit.org/show_bug.cgi?id=192762
Summary Reproducible ASSERTion failure when toggling layer borders with find-in-page up
alan
Reported 2018-12-17 10:46:07 PST
Attachments
Patch (12.94 KB, patch)
2018-12-17 11:01 PST, alan
no flags
alan
Comment 1 2018-12-17 11:01:47 PST
Simon Fraser (smfr)
Comment 2 2018-12-17 11:14:07 PST
Comment on attachment 357452 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=357452&action=review > LayoutTests/editing/document-marker-null-check.html:6 > +div:before { > + content: "foobar"; Isn't this exactly what I said!
alan
Comment 3 2018-12-17 11:16:26 PST
(In reply to Simon Fraser (smfr) from comment #2) > Comment on attachment 357452 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=357452&action=review > > > LayoutTests/editing/document-marker-null-check.html:6 > > +div:before { > > + content: "foobar"; > > Isn't this exactly what I said! I don't remember you saying "foobar".
WebKit Commit Bot
Comment 4 2018-12-17 11:43:03 PST
Comment on attachment 357452 [details] Patch Clearing flags on attachment: 357452 Committed r239279: <https://trac.webkit.org/changeset/239279>
WebKit Commit Bot
Comment 5 2018-12-17 11:43:05 PST
All reviewed patches have been landed. Closing bug.
Ryan Haddad
Comment 6 2018-12-17 11:56:49 PST
As EWS predicted, this has broken the iOS build: In file included from /Volumes/Data/EWS/WebKit/WebKitBuild/Release-iphoneos/DerivedSources/WebCore/unified-sources/UnifiedSource11-mm.mm:7: ./page/ios/FrameIOS.mm:628:62: error: non-const lvalue reference to type 'WebCore::Node' cannot bind to a value of unrelated type 'WebCore::Node *' for (auto* marker : document()->markers().markersFor(node, DocumentMarker::DictationPhraseWithAlternatives)) { ^~~~ In file included from /Volumes/Data/EWS/WebKit/WebKitBuild/Release-iphoneos/DerivedSources/WebCore/unified-sources/UnifiedSource11-mm.mm:7: In file included from ./page/ios/FrameIOS.mm:34: /Volumes/Data/EWS/WebKit/Source/WebCore/dom/DocumentMarkerController.h:85:68: note: passing argument to parameter here WEBCORE_EXPORT Vector<RenderedDocumentMarker*> markersFor(Node&, OptionSet<DocumentMarker::MarkerType> = DocumentMarker::allMarkers()); ^ 1 error generated.
alan
Comment 7 2018-12-17 12:18:47 PST
(In reply to Ryan Haddad from comment #6) > As EWS predicted, this has broken the iOS build: > > In file included from > /Volumes/Data/EWS/WebKit/WebKitBuild/Release-iphoneos/DerivedSources/WebCore/ > unified-sources/UnifiedSource11-mm.mm:7: > ./page/ios/FrameIOS.mm:628:62: error: non-const lvalue reference to type > 'WebCore::Node' cannot bind to a value of unrelated type 'WebCore::Node *' > for (auto* marker : document()->markers().markersFor(node, > DocumentMarker::DictationPhraseWithAlternatives)) { > ^~~~ > In file included from > /Volumes/Data/EWS/WebKit/WebKitBuild/Release-iphoneos/DerivedSources/WebCore/ > unified-sources/UnifiedSource11-mm.mm:7: > In file included from ./page/ios/FrameIOS.mm:34: > /Volumes/Data/EWS/WebKit/Source/WebCore/dom/DocumentMarkerController.h:85:68: > note: passing argument to parameter here > WEBCORE_EXPORT Vector<RenderedDocumentMarker*> markersFor(Node&, > OptionSet<DocumentMarker::MarkerType> = DocumentMarker::allMarkers()); > ^ > 1 error generated. https://trac.webkit.org/changeset/239280
Note You need to log in before you can comment on or make changes to this bug.